added graph